syntax = "proto3";

package proto.members.v1;

option go_package = "github.com/codeclout/AccountEd/session";

message EncryptedStringRequest {
  string sessionId = 1;
}

message EncryptedStringResponse {
  string encryptedSessionId = 1;
}