syntax = "proto3";

package proto.dynamo.v1;

option go_package = "github.com/codeclout/AccountEd/storage";

message StorePreRegistrationSessionRequest {
  string sessionID = 1;
  string browser_agent = 2;
  string forwarded_ip = 3;
  string member_id = 4;
  string member_firstname = 5;
  string member_lastname = 6;
}

message StorePreRegistrationSessionResponse {
  string sessionID = 1;
  string expires_at = 2;
}

message PreRegistrationConfirmationRequest {
  string sessionID = 1;
}

message PreRegistrationConfirmationResponse {
  bool active = 1;
  string browser_agent = 2;
  string created_at = 3;
  string expires_at = 4;
  string forwarded_ip = 5;
  string member_id = 6;
  string member_firstname = 7;
  string member_lastname = 8;
  string refresh_token = 9;
}